fixed audio and video

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <h1>here is header 1</h1>
         <p>text for header one</p>
         <audio controls autoplay>
-            <source src="C:\Users\kyee7\OneDrive\Desktop\Music\Toradora Opening 1.mp3">
+            <source src="horse.ogg" type="audio/ogg">
         </audio>
         <video width="320" height="240" controls>
-            <source src="C:\Users\kyee7\OneDrive\Desktop\Trebuchet\horizontal.mp4">
+            <source src="horizontal.mp4" type="video/mp4">
         </video>
         <details>
             <summary>summary</summary>
