--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <meta name="author" content="Kyle">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -14,23 +15,28 @@
         </div>
         <p>here is <span style="color:blue">blue</span>.</p>
 
+        <div class="listitem">
+            <ul>
+                <li>item one</li>
+                <li>item two</li>
+                <li>item three</li>
+            </ul>
+        </div>
 
-        <ul>
-            <li>item one</li>
-            <li>item two</li>
-            <li>item three</li>
-        </ul>
         <ol>
             <li>another item</li>
             <li>second item</li>
         </ol>
-        <p><b>here is bolded text goes here</b></p>
-        <strong>This text is <br>strong!</strong>
-        <p><i>italics</i></p>
-        <p><em>this is em text</em></p>
-        <img src="https://i.natgeofe.com/n/4f5aaece-3300-41a4-b2a8-ed2708a0a27c/domestic-dog_thumb_4x3.jpg" alt="dog" width="500" height="600">
-        <h1>here is header 1</h1>
-        <p>text for header one</p>
+        <div class="texts">
+            <p><b>here is bolded text goes here</b></p>
+            <strong>This text is <br>strong!</strong>
+            <p><i>italics</i></p>
+            <p><em>this is em text</em></p>
+            <img src="https://i.natgeofe.com/n/4f5aaece-3300-41a4-b2a8-ed2708a0a27c/domestic-dog_thumb_4x3.jpg" alt="dog" width="500" height="600">
+            <h1 id="firsth1">here is header 1</h1>
+            <p>text for header one</p>
+        </div>
+
         <audio controls autoplay>
             <source src="horse.ogg" type="audio/ogg">
         </audio>
